[gd_scene load_steps=17 format=3 uid="uid://cefkthik5xabh"]

[ext_resource type="Script" path="res://orb.gd" id="1_68io8"]
[ext_resource type="Texture2D" uid="uid://bn22lc7bmn4hk" path="res://orb_shading.png" id="2_fx2fs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x4aft"]
radius = 15.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2oom5"]

[sub_resource type="SphereMesh" id="SphereMesh_bl1t7"]
material = SubResource("ShaderMaterial_2oom5")

[sub_resource type="Gradient" id="Gradient_hgdjf"]
resource_local_to_scene = true
interpolation_mode = 1
colors = PackedColorArray(1, 1, 1, 0.541176, 1, 1, 1, 0.545098)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_45it1"]
resource_local_to_scene = true
gradient = SubResource("Gradient_hgdjf")
fill_from = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_3tnbf"]
offsets = PackedFloat32Array(0.522727, 1)
colors = PackedColorArray(0.999998, 0.99936, 0.722214, 1, 0.12549, 0.12549, 0.12549, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7thgw"]
gradient = SubResource("Gradient_3tnbf")
fill = 1
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_pro67"]
offsets = PackedFloat32Array(0.308442, 1)
colors = PackedColorArray(0.47788, 0.47788, 0.47788, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yhwu5"]
gradient = SubResource("Gradient_pro67")
fill = 1
fill_from = Vector2(0, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_wd88v"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_g3cee"]
offsets = PackedFloat32Array(0.00649351, 0.775974)
colors = PackedColorArray(0.619608, 0.619608, 0.619608, 0.67451, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3s8n2"]
gradient = SubResource("Gradient_g3cee")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.25, 0.5)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0bf23"]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hdo5r"]
blend_mode = 2

[node name="orb" type="Area2D"]
position = Vector2(252, 134)
script = ExtResource("1_68io8")
radius = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x4aft")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
light_mask = 257
z_index = -1
scale = Vector2(64, 64)
mesh = SubResource("SphereMesh_bl1t7")
texture = SubResource("GradientTexture2D_45it1")

[node name="PointLight2D" type="PointLight2D" parent="MeshInstance2D"]
visible = false
scale = Vector2(0.015625, 0.015625)
range_item_cull_mask = 256
texture = SubResource("GradientTexture2D_7thgw")

[node name="PointLight2D2" type="PointLight2D" parent="MeshInstance2D"]
visible = false
scale = Vector2(0.015625, 0.015625)
blend_mode = 1
range_item_cull_mask = 256
texture = SubResource("GradientTexture2D_yhwu5")

[node name="InnerLight" type="Sprite2D" parent="MeshInstance2D"]
visible = false
material = SubResource("CanvasItemMaterial_wd88v")
scale = Vector2(0.016, 0.016)
texture = SubResource("GradientTexture2D_3s8n2")

[node name="Sprite2D" type="Sprite2D" parent="MeshInstance2D"]
material = SubResource("CanvasItemMaterial_0bf23")
position = Vector2(-2.09548e-08, 2.09548e-08)
scale = Vector2(0.016, 0.016)
texture = ExtResource("2_fx2fs")

[node name="Sprite2D2" type="Sprite2D" parent="MeshInstance2D"]
material = SubResource("CanvasItemMaterial_hdo5r")
position = Vector2(-1.41561e-07, 4.14439e-08)
scale = Vector2(0.016, 0.016)
texture = ExtResource("2_fx2fs")
flip_h = true
flip_v = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
